--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,32 +1,28 @@
 ---
 const navigation = [
-  { name: 'Produkter og Kunder', href: '/produkter-og-kunder' },
+  { name: 'Arbeid', href: '/arbeid' },
   { name: 'Blogg', href: '/blogg' },
   { name: 'Kontakt', href: '/kontakt' },
 ];
 ---
 
 <header class="absolute inset-x-0 top-0 z-50">
-  <nav aria-label="Global" class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8">
-    <div class="flex lg:flex-1">
-      <a href="/" class="-m-1.5 p-1.5">
-        <span class="sr-only">Iniva</span>
-        <img
-          alt="Iniva logo"
-          src="/iniva-logo.png"
-          class="h-12 w-auto"
-        />
-      </a>
-    </div>
-    <div class="flex lg:hidden">
-      <button type="button" command="show-modal" commandfor="mobile-menu" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
-        <span class="sr-only">Åpne hovedmeny</span>
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6">
-          <path d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" stroke-linecap="round" stroke-linejoin="round" />
-        </svg>
-      </button>
-    </div>
-    <div class="hidden lg:flex lg:gap-x-12 lg:items-center">
+  <nav aria-label="Global" class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8 lg:justify-start">
+    <a href="/" class="-m-1.5 p-1.5">
+      <span class="sr-only">Iniva</span>
+      <img
+        alt="Iniva logo"
+        src="/iniva-logo.png"
+        class="h-12 w-auto"
+      />
+    </a>
+    <button type="button" command="show-modal" commandfor="mobile-menu" class="-m-2.5 rounded-md p-2.5 text-gray-700 lg:hidden">
+      <span class="sr-only">Åpne hovedmeny</span>
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6">
+        <path d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" stroke-linecap="round" stroke-linejoin="round" />
+      </svg>
+    </button>
+    <div class="hidden lg:ml-12 lg:flex lg:gap-x-12 lg:items-center">
       {navigation.map((item) => (
         <a href={item.href} class="text-sm/6 font-semibold text-gray-900">
           {item.name}
