--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,7 +8,7 @@ import Footer from '../components/Footer.astro';
   <div class="bg-white">
     <Header />
 
-    <div class="mx-auto max-w-7xl px-6 py-32 text-center sm:py-40 lg:px-8">
+    <div class="mx-auto max-w-7xl px-6 pt-32 pb-32 text-center sm:pt-40 sm:pb-40 lg:px-8">
       <p class="text-base/8 font-semibold text-indigo-600">404</p>
       <h1 class="mt-4 text-5xl font-semibold tracking-tight text-balance text-gray-900 sm:text-7xl">
         Siden ikke funnet
